<resources>
    <string name="app_name">电商后台管理系统</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="please_log_in">请登录</string>
    <string name="account">账号：</string>
    <string name="please_input_account">请输入账号</string>
    <string name="password">密码：</string>
    <string name="please_input_password">请输入密码</string>
    <string name="sign_up">注册</string>
    <string name="log_in">登陆</string>
    <string name="remember_password">记住密码</string>
    <string name="sign_up_account">注册账号</string>
    <string name="chick_password">确认密码:</string>
    <string name="account_class">账号类型:</string>
    <string name="chick_account_sign_up">确认注册</string>
    <string name="admin_account_key">管理员码:</string>
    <string name="admin_account_key_string">SONGADMINKEY</string>
    <string name="input_password_again">再次输入密码</string>
    <string name="merchants_name">商店名称</string>
    <string name="merchants_level">商店等级</string>
    <string name="merchants_notes">商店通知</string>
    <string name="anything">无</string>
    <string name="create_merchants">创建商店</string>
    <string name="goods_name">商品名称</string>
    <string name="goods_price">商品价格</string>
    <string name="goods_introduction">商品介绍</string>
    <string name="create_goods">创建商品</string>
    <string name="goods_picture">商品图片</string>
    <string name="take_photo">拍照选择图片</string>
</resources>
