<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item_selector">


    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/item_selector"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/account"
                android:textSize="20sp"
                android:textColor="#000"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="@string/please_input_account"
                android:id="@+id/sign_up_account_id"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/password"
                android:textSize="20sp"
                android:textColor="#000"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:inputType="textPassword"
                android:hint="@string/please_input_password"
                android:id="@+id/sign_up_account_password"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/chick_password"
                android:textSize="20sp"
                android:textColor="#000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:inputType="textPassword"
                android:hint="@string/input_password_again"
                android:id="@+id/sign_up_account_chick_password"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:id="@+id/admin_account_key"
                android:gravity="center"
                android:text="权限码："
                android:textSize="20sp"
                android:textColor="#000"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:inputType="textPassword"
                android:hint="请输入权限码"
                android:id="@+id/admin_account_key_input"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/item_selector"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00bfff"
                android:id="@+id/button_chick_account_sign_up"
                android:enabled="false"
                android:gravity="center"
                android:text="确认修改"
                android:textSize="20sp"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>